[package]
name = "gungho"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
notify = "8"
prometheus = "0.14"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
rand = "0.10"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
pretty_assertions = "1"
